--- a/apps/web/src/styles/globals.css
+++ b/apps/web/src/styles/globals.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+@import './codemirror.css';
+
 @layer utilities {
   .writing-mode-vertical-rl {
     writing-mode: vertical-rl;
